--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -737,7 +737,7 @@ html {
 .u-ma-6 {
   margin: 6rem; }
 
-.u-mt-6 {
+.u-mt-6, .page-content, .post-content {
   margin-top: 6rem; }
 
 .u-mr-6 {
@@ -760,10 +760,10 @@ html {
 .u-pa-6 {
   padding: 6rem; }
 
-.u-pt-6, .page-content {
+.u-pt-6 {
   padding-top: 6rem; }
 
-.u-pr-6, .footer__content .flex__item {
+.u-pr-6, .page-title, .post-title, .footer__content .flex__item {
   padding-right: 6rem; }
 
 .u-pb-6, .has-sidebar .section__content {
@@ -1438,6 +1438,10 @@ figure {
 .module--basic .module__aside {
   flex: 0 0 31.76%; }
 
+@media screen and (min-width: 768px) {
+  .page-content, .post-content {
+    padding-right: 30%; } }
+
 .post-image {
   width: 100%;
   height: 0;
@@ -1469,48 +1473,48 @@ caption {
   padding-bottom: 0.5em;
   color: lightgray; }
 
-.table, .page-content table {
+.table, .page-content table, .post-content table {
   max-width: 100%; }
-  .table > thead > tr > th, .page-content table > thead > tr > th,
-  .table > thead > tr > td, .page-content table > thead > tr > td,
-  .table > tbody > tr > th, .page-content table > tbody > tr > th,
-  .table > tbody > tr > td, .page-content table > tbody > tr > td,
-  .table > tfoot > tr > th, .page-content table > tfoot > tr > th,
-  .table > tfoot > tr > td, .page-content table > tfoot > tr > td {
+  .table > thead > tr > th, .page-content table > thead > tr > th, .post-content table > thead > tr > th,
+  .table > thead > tr > td, .page-content table > thead > tr > td, .post-content table > thead > tr > td,
+  .table > tbody > tr > th, .page-content table > tbody > tr > th, .post-content table > tbody > tr > th,
+  .table > tbody > tr > td, .page-content table > tbody > tr > td, .post-content table > tbody > tr > td,
+  .table > tfoot > tr > th, .page-content table > tfoot > tr > th, .post-content table > tfoot > tr > th,
+  .table > tfoot > tr > td, .page-content table > tfoot > tr > td, .post-content table > tfoot > tr > td {
     padding: 0.5em 2rem;
     vertical-align: top; }
-    .table > thead > tr > th:first-child, .page-content table > thead > tr > th:first-child,
-    .table > thead > tr > td:first-child, .page-content table > thead > tr > td:first-child,
-    .table > tbody > tr > th:first-child, .page-content table > tbody > tr > th:first-child,
-    .table > tbody > tr > td:first-child, .page-content table > tbody > tr > td:first-child,
-    .table > tfoot > tr > th:first-child, .page-content table > tfoot > tr > th:first-child,
-    .table > tfoot > tr > td:first-child, .page-content table > tfoot > tr > td:first-child {
+    .table > thead > tr > th:first-child, .page-content table > thead > tr > th:first-child, .post-content table > thead > tr > th:first-child,
+    .table > thead > tr > td:first-child, .page-content table > thead > tr > td:first-child, .post-content table > thead > tr > td:first-child,
+    .table > tbody > tr > th:first-child, .page-content table > tbody > tr > th:first-child, .post-content table > tbody > tr > th:first-child,
+    .table > tbody > tr > td:first-child, .page-content table > tbody > tr > td:first-child, .post-content table > tbody > tr > td:first-child,
+    .table > tfoot > tr > th:first-child, .page-content table > tfoot > tr > th:first-child, .post-content table > tfoot > tr > th:first-child,
+    .table > tfoot > tr > td:first-child, .page-content table > tfoot > tr > td:first-child, .post-content table > tfoot > tr > td:first-child {
       padding-left: 0; }
-    .table > thead > tr > th > *:first-child, .page-content table > thead > tr > th > *:first-child,
-    .table > thead > tr > td > *:first-child, .page-content table > thead > tr > td > *:first-child,
-    .table > tbody > tr > th > *:first-child, .page-content table > tbody > tr > th > *:first-child,
-    .table > tbody > tr > td > *:first-child, .page-content table > tbody > tr > td > *:first-child,
-    .table > tfoot > tr > th > *:first-child, .page-content table > tfoot > tr > th > *:first-child,
-    .table > tfoot > tr > td > *:first-child, .page-content table > tfoot > tr > td > *:first-child {
+    .table > thead > tr > th > *:first-child, .page-content table > thead > tr > th > *:first-child, .post-content table > thead > tr > th > *:first-child,
+    .table > thead > tr > td > *:first-child, .page-content table > thead > tr > td > *:first-child, .post-content table > thead > tr > td > *:first-child,
+    .table > tbody > tr > th > *:first-child, .page-content table > tbody > tr > th > *:first-child, .post-content table > tbody > tr > th > *:first-child,
+    .table > tbody > tr > td > *:first-child, .page-content table > tbody > tr > td > *:first-child, .post-content table > tbody > tr > td > *:first-child,
+    .table > tfoot > tr > th > *:first-child, .page-content table > tfoot > tr > th > *:first-child, .post-content table > tfoot > tr > th > *:first-child,
+    .table > tfoot > tr > td > *:first-child, .page-content table > tfoot > tr > td > *:first-child, .post-content table > tfoot > tr > td > *:first-child {
       margin-top: 0; }
-  .table > thead > tr > th, .page-content table > thead > tr > th {
+  .table > thead > tr > th, .page-content table > thead > tr > th, .post-content table > thead > tr > th {
     vertical-align: bottom; }
-  .table > caption + thead > tr:first-child > th, .page-content table > caption + thead > tr:first-child > th,
-  .table > caption + thead > tr:first-child > td, .page-content table > caption + thead > tr:first-child > td,
-  .table > colgroup + thead > tr:first-child > th, .page-content table > colgroup + thead > tr:first-child > th,
-  .table > colgroup + thead > tr:first-child > td, .page-content table > colgroup + thead > tr:first-child > td,
-  .table > thead:first-child > tr:first-child > th, .page-content table > thead:first-child > tr:first-child > th,
-  .table > thead:first-child > tr:first-child > td, .page-content table > thead:first-child > tr:first-child > td {
+  .table > caption + thead > tr:first-child > th, .page-content table > caption + thead > tr:first-child > th, .post-content table > caption + thead > tr:first-child > th,
+  .table > caption + thead > tr:first-child > td, .page-content table > caption + thead > tr:first-child > td, .post-content table > caption + thead > tr:first-child > td,
+  .table > colgroup + thead > tr:first-child > th, .page-content table > colgroup + thead > tr:first-child > th, .post-content table > colgroup + thead > tr:first-child > th,
+  .table > colgroup + thead > tr:first-child > td, .page-content table > colgroup + thead > tr:first-child > td, .post-content table > colgroup + thead > tr:first-child > td,
+  .table > thead:first-child > tr:first-child > th, .page-content table > thead:first-child > tr:first-child > th, .post-content table > thead:first-child > tr:first-child > th,
+  .table > thead:first-child > tr:first-child > td, .page-content table > thead:first-child > tr:first-child > td, .post-content table > thead:first-child > tr:first-child > td {
     border-top: 0; }
-  .table .table, .page-content table .table, .table .page-content table, .page-content .table table, .page-content table table {
+  .table .table, .page-content table .table, .post-content table .table, .table .page-content table, .page-content .table table, .page-content table table, .table .post-content table, .post-content .table table, .post-content table table {
     background-color: transparent; }
 
-.table--ruled > thead > tr > td, .page-content table > thead > tr > td,
-.table--ruled > tbody > tr > td, .page-content table > tbody > tr > td,
-.table--ruled > tfoot > tr > td, .page-content table > tfoot > tr > td {
+.table--ruled > thead > tr > td, .page-content table > thead > tr > td, .post-content table > thead > tr > td,
+.table--ruled > tbody > tr > td, .page-content table > tbody > tr > td, .post-content table > tbody > tr > td,
+.table--ruled > tfoot > tr > td, .page-content table > tfoot > tr > td, .post-content table > tfoot > tr > td {
   border-top: 1px solid gray; }
 
-.table--ruled > tbody + tbody, .page-content table > tbody + tbody {
+.table--ruled > tbody + tbody, .page-content table > tbody + tbody, .post-content table > tbody + tbody {
   border-top: 2px solid gray; }
 
 .table--bordered {
