--- a/assets/css/sass/base/_typography.scss
+++ b/assets/css/sass/base/_typography.scss
@@ -25,62 +25,51 @@ textarea {
 
 /* Headings
  * ------------------------------------------ */
- h1, .h1 {
+@mixin heading-base {
 	font-family: $gta-extended-black;
+	text-transform: uppercase;
+	margin-top: $leading;
+	margin-bottom: 0;
+}
+
+ h1, .h1 {
+	@include heading-base;
 	font-size: rem(36);
 	line-height: 1;
-    margin-top: 0;
-    margin-bottom: 0;
-	text-transform: uppercase;
 	@include media($md) {
         font-size: rem(70);
 	}
  }
  h2, .h2 {
-	font-family: $gta-extended-black;
-	font-size: rem(32);
+	@include heading-base;
+	font-size: rem(34);
 	line-height: 1;
-    margin-top: 0;
-    margin-bottom: 0;
-	text-transform: uppercase;
 	@include media($md) {
         font-size: rem(48);
 	}
  }
  h3, .h3 {
-	font-family: $gta-extended-black;
+	@include heading-base;
 	font-size: rem(32);
 	line-height: 1.125em;
-    margin-top: 0;
-    margin-bottom: 0;
-	text-transform: uppercase;
 	@include media($md) {
         font-size: rem(36);
 	}
  }
  h4, .h4 {
-	font-family: $gta-extended-black;
+	@include heading-base;
 	font-size: rem(30);
 	line-height: 1.25em;
-    margin-top: 0;
-    margin-bottom: 0;
-	text-transform: uppercase;
  }
  h5, .h5 {
-	font-family: $gta-extended-black;
+	@include heading-base;
 	font-size: rem(24);
 	line-height: 1.25em;
-    margin-top: 0;
-    margin-bottom: 0;
-	text-transform: uppercase;
  }
  h6, .h6 {
-	font-family: $gta-extended-black;
+	 @include heading-base;
 	font-size: rem(18);
 	line-height: 1.25em;
-    margin-top: 0;
-    margin-bottom: 0;
-	text-transform: uppercase;
  }
 
  /* Links
@@ -120,7 +109,7 @@ p {
 
 ul, ol {
 	list-style: none;
-	margin: 0;
+	margin: $leading 0 0;
 	padding: 0;
 }
 
@@ -142,9 +131,8 @@ dfn, cite, em, i {
 
 blockquote {
 	@extend h2;
-	font-family: $gta-extended-black;
-    text-transform: none;
-    margin: 0;
+	text-transform: none;
+    margin: $leading 0 0;
 
 	p {
 		margin: 0;
