--- a/assets/css/sass/blocks/_masthead.scss
+++ b/assets/css/sass/blocks/_masthead.scss
@@ -1,4 +1,5 @@
 .masthead {
+    position: -webkit-sticky;
     position: sticky; // locally testing intended behaviour; unsupported in ie, edge
     top: $leading * 3;
     @extend .u-mb-2;
