add no-js script

--- a/assets/css/sass/blocks/_menu.scss
+++ b/assets/css/sass/blocks/_menu.scss
@@ -19,11 +19,11 @@
         @extend .h6;
     }
     .site-menu & {
-        a {
-            @extend .u-color-white;
-            &:hover {
-                @extend .u-color-dark-gray;
-            }
-        }
+        // a {
+        //     @extend .u-color-white;
+        //     &:hover {
+        //         @extend .u-color-dark-gray;
+        //     }
+        // }
     }
 }
